# HPC-labs

./: .gitignore  README.md
archive/lab-machine/: base.md
archive/sxp/: base.md
lab01/: CMakeLists.txt  audio.c  audio.h  codec.c  codec.h  decoder.c  decoder.h  encoder.h  file.c  libsndfile.c  main.c  sandbox.c
lab01/code/: CMakeLists.txt  audio.c  audio.h  decoder.c  decoder.h  encoder.c  encoder.h  fft.h  file.h  libsndfile.c  main.c  sandbox.c  xmake.lua
lab01/report/: report.md
lab01/testing/: tests.fish
lab02/code/: CMakeLists.txt  const.h  decoder.c  encoder.c  encoder.h  file.c  xmake.lua
lab02/code/src/: test_likwid.c
lab02/code/txt/: base.txt
lab02/report/: report.md
lab02/script/: roofline_gen.py
lab03/: questions.md  report.md
lab04/code/part1/: CMakeLists.txt  tests.fish
lab04/code/part1/include/: image.h  k-means.h  weird.h
lab04/code/part1/src/: image.c  k-means.c  main.c  weird.c  weirdmain.c
lab04/code/part2/: CMakeLists.txt  tests.fish
lab04/code/part2/include/: image.h  weird.h
lab04/code/part2/src/: main.c  weird.c
lab04/report/: report.md
lab05/code/: Makefile  create-sample.c  main.c
lab05/report/: report.md
lab06/code/: CMakeLists.txt  main.c  measure.fish  measure2.fish  perf-markers.sh  perf.h
lab06/report/: report.md
lab07/code/: CMakeLists.txt  tests.fish
lab07/code/part1/: CMakeLists.txt  tests.fish
lab07/code/part2/: CMakeLists.txt  decoder.c  decoder.h  fft.c  main.c
lab07/code/part2/txt/: verylong.txt  verylong2.txt
lab07/code/src/: main.c
lab07/report/: report.md
